js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-do-while-trailing-comma-first.js
do
{
import
(
'
.
/
empty_FIXTURE
.
js
'
)
;
}
while
(
false
)
;
reportCompare
(
0
0
)
;
