js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-do-while-import-defer-no-rest-param.js
DONOTEVALUATE
(
)
;
do
{
import
.
defer
(
.
.
.
[
'
.
/
empty_FIXTURE
.
js
'
]
)
;
}
while
(
false
)
;
